Upgrade services to JDK 21